--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -18,8 +18,9 @@ http {
 
     sendfile        on;
 
-    keepalive_timeout  65;
-    client_max_body_size 32m;
+    keepalive_timeout		<%= ENV['KEEPALIVE_TIMEOUT'] ? ENV['KEEPALIVE_TIMEOUT'] : 65 %>;
+    client_max_body_size	<%= ENV['CLIENT_MAX_BODY_SIZE'] ? ENV['CLIENT_MAX_BODY_SIZE'] : '32m' %>;
+    post_max_size		<%= ENV['POST_MAX_SIZE'] ? ENV['POST_MAX_SIZE'] : '32m' %>;
 
     gzip  on;
 
@@ -27,7 +28,7 @@ http {
     server {
       server_name	<%= ENV['SERVER_NAME'] ? ENV['SERVER_NAME'] : '_' %>;
       listen		80;
-      rewrite		^/(.*)$https://$host/$1 permanent;
+      rewrite		^/(.*)$ https://$host/$1 permanent;
     }
     <%- end -%>
     server {
